--- a/odm/init.oplus.face.rc
+++ b/odm/init.oplus.face.rc
@@ -3,6 +3,12 @@ on post-fs-data
     chmod 0770 /dev/mx6300_tac
 
     chown system system /proc/ldmp_sn
+    chown system system /proc/oppo_face_common/face_ir_sensor_tempature
+    chown system system /proc/oppo_face_common/face_ldmp_power
+    chown system system /proc/oppo_face_common/face_ldmp_tempature
+    chown system system /proc/oppo_face_common/face_ntc_svc
+    chown system system /proc/oppo_face_common/face_temp_ir
+    chown system system /proc/oppo_face_common/face_temp_ldmp
     chown system system /proc/lm3644_enable
     chown system system /proc/lm3643_enable
     chown system system /proc/ldmp_enable
@@ -14,7 +20,5 @@ on post-fs-data
     chown system system /proc/ldmp_sn
     rm /persist/camera/Tiger_181_calib.bin
     chown system system /mnt/vendor/persist/camera/DepthParams.bin
-    chown system system /mnt/vendor/persist/camera/stereoParams.bin
     chmod 0644 /mnt/vendor/persist/camera/DepthParams.bin
-    chmod 0644 /mnt/vendor/persist/camera/stereoParams.bin
 
