--- a/odm/init/vendor-oplus-hardware-engineer@1.0-service.rc
+++ b/odm/init/vendor-oplus-hardware-engineer@1.0-service.rc
@@ -1,5 +1,5 @@
 service oplus.engineer-1-0 /odm/bin/hw/vendor-oplus-hardware-engineer@1.0-service
     class main
-    user system
-    group system
+    user root
+    group root system graphics
     interface vendor.oplus.hardware.engineer@1.0::IEngineer default
