--- a/odm/init/vendor.oplus.hardware.charger@1.0-service.rc
+++ b/odm/init/vendor.oplus.hardware.charger@1.0-service.rc
@@ -24,3 +24,7 @@ on property:sys.boot_completed=1
 	write /proc/ui_soc_decimal 1
 	chmod 0666 /sys/class/power_supply/battery/current_now
 	chown system system /sys/class/oplus_chg/wireless/status_keep
+	chmod 0666 /sys/class/oplus_wireless/pencil/rx_soc
+	chmod 0666 /sys/class/oplus_wireless/pencil/present
+	chmod 0666 /sys/class/oplus_chg/battery/normal_cool_down
+	chmod 0666 /sys/class/oplus_chg/battery/normal_current_now
