--- a/odm/init/vendor.oplus.hardware.performance@1.0-service.rc
+++ b/odm/init/vendor.oplus.hardware.performance@1.0-service.rc
@@ -1,5 +1,6 @@
 # Add 'readproc' for 'proc/pid/task/tid/*'
 service vendor.performance-1-0 /odm/bin/hw/vendor.oplus.hardware.performance@1.0-service
     class hal
-    user system
+    capabilities SYS_PTRACE
+    user root
     group system readproc
