--- a/odm/ueventd.reserve.rc
+++ b/odm/ueventd.reserve.rc
@@ -7,11 +7,18 @@ subsystem adf
 /dev/block/sdf10   0660   root     system
 /dev/block/sdf13   0660   root     system
 /dev/block/sde13   0660   root     system
+/dev/block/sdf4    0660   root     system
 
 /dev/block/bootdevice/by-name/oplusreserve3               0660   root     system
 /dev/block/sdf15   0660   root     system
 /dev/block/sde15   0660   root     system
 /dev/block/sde50   0660   root     system
+/dev/block/sdf6    0660   root     system
+
+/dev/block/bootdevice/by-name/oplusreserve5               0660   root     system
+/dev/block/sdf17   0660   root     system
+/dev/block/sdf8    0660   root     system
+
 #Hong.Zhang@TECH.BSP.Stability.Aging2.0, 2020/07/14, Add for aging 2.0
 #ifdef OPLUS_FEATURE_AGINGTEST
 /dev/block/bootdevice/by-name/ddr                0660           root     system
